L: Fixed almost all bugs, still a few left

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
     "shortcuts": {
         "uppercase": "29+91+56+22",
-        "lowercase": "29+91+56+38",
+        "lowercase": "NONE",
         "titlecase": "29+91+56+20",
         "sentencecase": "29+91+56+46",
         "macrocase": "29+91+56+50",
