--- a/settings.json
+++ b/settings.json
@@ -8,7 +8,8 @@
         "snakecase": "29+91+56+31",
         "pascalcase": "29+91+56+25",
         "kebabcase": "29+91+56+37",
-        "count": "29+91+56+48"
+        "count": "29+91+56+11",
+        "launch": "29+91+56+36"
     },
     "start_with_windows": 0,
     "start_hidden_tray": 0
